feat(cache): add Redis caching + endpoint config + new MCP tools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,8 @@ dependencies = [
     "urllib3 (==2.2.3)",
     "uvicorn (==0.38.0)",
     "watchdog (==6.0.0)",
-    "fastapi (>=0.121.1,<0.122.0)"
+    "fastapi (>=0.121.1,<0.122.0)",
+    "redis (>=7.0.1,<8.0.0)"
 ]
 
 
